docs/style.css
body {
  color: black;
  /*background-color: red !important; */
  /* overflow-x: hidden; */
}

.pane-title {
  display: none;
}

#breadcrumbWrapper {
  display: none;
}

#stickySearch {
  display: none;
}

#header {
  display: none;
}

strong,
strong a {
  font-weight: bold !important;
}

/* //////////////////// HIDE STICKY SEARCH MENU ////////////////////// */

#nav-bar {
  background-color: transparent;
  display: block;
}

div#stickySearch {
  display: none;
}

/* //////////////////// MENU TITLE ////////////////////// */

#nav-bar.fadeInDown {
  display: none;
}

.fadeInDown {
  -webkit-animation-name: none;
  animation-name: none;
}

#nav-bar {
  border: black solid 1px;
  position: fixed !important;
  height: 50px;
}

.mainWrapper {
  padding-left: 0px;
  padding-right: 0px;
}

#nav-bar-wrapper {
  background-color: white;
  margin: 0px;
  padding: 0;
  height: 100%;
  width: 100%;
  max-width: 100%;
}

.nav-group {
  display: inline !important;
}

#navigation {
  height: 100%;
  z-index: 999999 !important;

}

nav#main-nav {
  height: 100%;
}

.container.mainMenu:before,
.container.mainMenu:after {
  content: none;
}

.container.mainMenu {
  height: 100%;
  -webkit-box-sizing: border-box;
  /* Safari/Chrome, other WebKit */
  -moz-box-sizing: border-box;
  /* Firefox, other Gecko */
  box-sizing: border-box;
  /* Opera/IE 8+ */
  margin-top: 0px;
  padding: 0px;
  padding-top: 10px;
  max-width: 100000000px;
  color: black;
  z-index: 1000;
}

.mainMenu .row {
  margin-left: 0px;
  margin-right: 0px;
  /* transform: translate(0px, -50%); */
  height: 100%;
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-between;
}

.mainMenu .row::before,
.mainMenu .row::after {
  content: none;
}

.mainMenu .col-md-3 {
  width: 14%;
}

.mainMenu .pos-four {
  display: none;
}

.mainMenu #main-nav .row {
  height: 100%;
  width: 100%;
  position: relative;
  left: 33px;
}

.mainMenu .row .col-md-4 {
  height: 100%;
}

.mainMenu .row article {
  height: 100%;
}

.mainMenu .row .col-copy {
  height: 100%;
}

.mainMenu .row .col-copy p {
  height: 100%;
}

.mainMenu span {
  font-size: 1.5rem;
}

.mainMenu a > span {
  text-decoration: none;
}

div.fullMenu p {
  margin-top: 0px;
  margin-bottom: 0px;
}

div.fullMenu h3.promo-title {
  margin-top: 1.5rem;
  margin-bottom: 0px !important;
}

div.fullMenu p > a > span.testimonial-light {
  text-decoration: none; 
  font-size: 1.3rem;
}


.container.mainMenu * img.igLogo {
  float: right;
  height: 30px !important;
  width: 30px !important;
  filter: brightness(0%);
}

#currentTab {
  display: none;
}

#currentTab p {
  font-size: 1.5em;
  font-family: 'Avenir Next Cyr W00 Light';
  text-align: left;
  text-transform: uppercase;
  color: #033c5a;
  margin-top: 0.5em;
}

.titleCotsonTextileStudyCenter {
  text-align: center;
}

#navigation-mobile {
  display: none;
}

.col-md-3 {
  width: 25%;
  /* float: left; */
}

.col-md-6 {
  width: 100%;
  /* float: left; */
}

.fullMenu {
  width: 100vw;
  height: 100vh;
  padding: 16px;
  background-color: #eff9ff;
  position: absolute;
  top: 50px;
  transition: top 1s ease-in-out;
  z-index: 10;
  overflow: scroll;
  color: black !important;
}

.fullMenu span {
  font-size: 1.5rem;
  line-height: 1em;
  color: black !important;
}

.fullMenu h3 {
  font-size: 1.5rem !important;
  color: black !important;
  margin-bottom: 0.2em !important;
}

.fullMenu p {
  padding-left: 1.5rem;

}

.hideMenu {
  top: 110vh;
}

/* ////////////////////// footer ////////////////// */

#local-footer {
  display: none;
}

.blueFooter {
  max-width: 100%;
  width: calc(100% - 30px);
  bottom: 43px;
  position: absolute;
}

.blueFooter .blue-boxes-divider {
  display: none;
}

.blueFooter .col-sm-12 {
  width: 33.33333% !important;
}

.blueFooter p {
  font-size: 0.7em;
}

/* ///////////////////////////////////// */

a,
#menuButton {
  text-decoration: none;
  color: black;
  font-family: "Avenir Next Cyr W00 Light", Helvetica, Arial, sans-serif !important;
  font-size: 1.5rem;
}

a:hover,
#menuButton {
  text-decoration: none;
  /* color: grey; */
  cursor: pointer;
}

#stickyLogo {
  display: none;
}

/* ///////////////// MEDIA AND DOCU / TEMPLATE 2 /////////////////// */

.container.mediaAndDocu {
  padding-top: 45px;
  text-align: center;
  width: 80%;
  position: relative;
  top: 0px;
}

h2 {
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}

hr {
  border-bottom: solid 1px;
}

.mediaVideo article {
  border-bottom: black solid 1px;
}

/* ////////////////////////////// TEMPLATE 1 & landing //////////////////////////////////////// */
.template-1-landing {
  overflow: hidden;
}

.template-1 p {
  font-size: 1.5rem;
}

.template-1,
.template-1-landing {
  width: 100vw;
  height: 100vh;
  position: absolute;
  left: 0px;
  bottom: 0px;
  overflow-x: hidden;
}

.template-1 .container {
  position: relative;
  top: 0px;

  /* max-width: 100% !important;
  width: 100% !important;
  margin-right: 0;
  margin-left: 0; */

  max-width: 900px !important;
  width: 100% !important;
  margin-right: auto;
  margin-left: auto;
}

.template-1-landing .container {
  position: relative;
  top: 50px;
  /* height: calc(100vh - 115px); */
}

.fullwidth {
  width: 100vw;
  max-width: 100vw;
  margin: 0px;
  padding: 0px;
}

.template-1 .container.five-across,
.template-1-landing .container.five-across,
.underMenu,
.tabs {
  position: relative;
  top: 50px;
  text-align: center;
  height: 70px !important;
  position: sticky;
  z-index: 1;
  background: white;
}

.tabs h3.promo-title {
  font-size: 1.5rem !important;
}

/* .template-1 .fullwidth .row {
  min-height: 100vh;
} */


.template-1 .fullwidth article,
.template-1 .fullwidth .row,
.template-1 .fullwidth .pos-one,
.template-1 .fullwidth .pos-two,
.template-1 .fullwidth .col-img {
  height: 100%;
}

.template-1-landing .fullwidth article,
.template-1-landing .fullwidth .row,
.template-1-landing .fullwidth .pos-one,
.template-1-landing .fullwidth .pos-two,
.template-1-landing .fullwidth .media,
.template-1-landing .fullwidth .col-img {
  height: 100%;
}

/* .template-1 .fullwidth .pos-one,
.template-1 .fullwidth .pos-two {
  /* position: absolute;
} */



/* Attempt fix sticky header */
.zen-clear {
  overflow: visible;
}

.template-1 .fullwidth .pos-one {
  left: 0px;
}

.template-1 .fullwidth .pos-two {
  right: 0px;
}

.template-1 .fullwidth .pos-two,
.template-1-landing .fullwidth .pos-two {
  padding: 0px;
  position: absolute;
  /* position: -webkit-sticky; */
  /* top: 50px; */
  height: 100%;
}

.template-1 .fullwidth .row,
.template-1-landing .fullwidth .row {
  margin-left: 0px;
  margin-right: 0px;
  position: relative;
}

.template-1 .row,
.template-1-landing .row {
  margin-left: 0px;
  margin-right: 0px;
  display: flex;
  align-self: flex-start;
  justify-content: left;
}

/* .template-1 .fullwidth .pos-one,
.template-1-landing .fullwidth .pos-one {
     overflow: scroll; 
} */



.template-1 .fullwidth .img-responsive,
.template-1-landing .fullwidth .img-responsive {
  height: 100% !important;
  object-fit: cover;
}

.container p.col-img img {
  height: 100% !important;
  object-fit: cover;
  margin-top: 10%;
}

.container .centered p.col-img {
  height: 100vh !important;

}

.homepage .centered img {
  height: 100vh !important;
  object-fit: cover;

}

.homepage .fullwidth .img-responsive {
  height: 100vh !important;
  object-fit: cover;
}

.img-template-1 {
  height: 100% !important;
  object-fit: cover;
}

/* .fullwidth .col-sm-6 {
  width: 50%;
  float: left;
} */

.fullwidth .col-sm-6 {
  width: 100% !important;
  float: initial;
}

.fullwidth .col-xs-12 {
  padding-left: 1rem;
  padding-right: 1rem;
}

.fullwidth .col-xs-12,
.mainMenu .col-xs-12 {
  padding-left: 3rem;
  padding-right: 3rem;
}



/* //////////////////////////////////// TEMPLATE 1 //////////////////////////////////////////////// */

.template-1 h3 span,
.template-1 h3 {
  font-size: 1.5em !important;
  line-height: normal;
  text-align: center;
}

.testimonial-heavy a {
  font-family: Avenir Next LT W04 Bold !important;
}

.backgroundColored {
  background: aliceblue;
}



.rowContent {
  width: 100%;
  position: sticky;
  top: 100px;
  margin-bottom: 20px;
}

.rowContent img {
  width: 70% !important;
}

.template-1 .backgroundColored .col-copy h6 {
  margin-top: 0px;
  position: relative;
  top: -10px;
}

.template-1 h6 {
  margin-top: 0px;
}

.template-1 h6.rtecenter {
  margin-bottom: 5%;
}

.template-1 .rowContent h6 {
  margin-top: 0px;
}

.colorForBackground {
  display: none;
}

.buttonLibrary {
  width: 30px;
  height: 30px;
  position: absolute;
  top: 0px;
  right: 0px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-content: space-around;
  margin: 5px;
  cursor: pointer;
  z-index: 8;
}

.buttonLibrary div {
  background-color: grey;
  width: 45%;
  height: 45%;
}

.arrow {
  display: none;
}

h5 {
  font-size: 1.2em;
}

/* ///////////////////////// more images / LIBRARY /////////////////////////// */

.moreImages {
  display: none;
}

.library {
  position: fixed;
  width: 100vw;
  height: 100vh;
  left: 100vw;
  transition: left 1s ease-in-out;
  background-color: white;
  z-index: 9;
}

.library.open {
  left: 0px;
}

#biggerPicture {
  position: absolute;
  top: calc(50% - 70px);
  left: 50%;
  transform: translate(-50%, -50%);
  /* height: calc(60vh - 200px); */
  width: 75% !important;
}

#biggerPicture img {
  /* height: calc(90vh - 250px); */
  width: auto !important;
  display: block;
  margin: auto;
}

.view-port {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 200px;
  background-color: white;
  position: absolute;
  bottom: 0px;
  left: 0;
  overflow: hidden;
  border: solid black 1px;
}

.images-container {
  margin: 0;
  padding: 0;
  width: inherit;
  height: inherit;

  display: flex;
  position: absolute;
  overflow: scroll;
}

.card {
  /* margin: 0;
    padding: 0;
    width: content;
    height: content;

    float: left;
    padding: 10px; */
  /* position: absolute; */
  /* top: 50%;
    left: 50%;
    transform: translate(-50%, -50%); */
  box-sizing: border-box;
  padding: 10px 0 10px 10px;
  height: 100%;
}

.card.last {
  padding: 10px;
}

.card img {
  /* height: 100%;
    position: relative; */
  /* top: 50%;
    left: 50%;
    transform: translate(-50%, -50%); */
  /* object-fit: cover; */
  height: 100% !important;
  max-width: 1000px !important;
  width: auto !important;
}

.closeLibrary {
  /* background-color: red; */
  position: absolute;
  top: 60px;
  right: 10px;
  width: 40px;
  height: 40px;
  opacity: 0.3;
}

.closeLibrary:hover {
  opacity: 1;
}

.closeLibrary:before,
.closeLibrary:after {
  position: absolute;
  left: 15px;
  content: " ";
  height: 33px;
  width: 2px;
  background-color: #333;
}

.closeLibrary:before {
  transform: rotate(45deg);
}

.closeLibrary:after {
  transform: rotate(-45deg);
}


/* ////////////// BLUE FOOTER IN MENU ///////////////// */

